--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
  {
-  "name": "Helga",
+  "name": "W I L B O T",
   "version": "0.0.2",
-  "description": "Yang-Gak-Subscribe-Semoga-Error-Amin",
+  "description": "TESSSS",
   "main": "index.js",
   "directories": {
     "lib": "lib"
